[package]
name = "power-assert-macros"
version = "0.3.9"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/power-assert-rs"
description = "Power Assert in Rust. Provides better assertion message."
edition = "2021"

[lib]
name = "power_assert_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = {version = "1.0", features=["full", "fold"]}
quote = "1.0"
proc-macro2 = {version = "1.0", features=["span-locations"]}
